objects/Metrics__c.object
<CustomObject>
    <fields>
        <fullName>Allocated_MDF_Amount_Q1__c</fullName>
        <label>Current FY Allocated Q1 ($)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Allocated_MDF_Amount_Q2__c</fullName>
        <label>Current FY Allocated Q2 ($)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Allocated_MDF_Amount_Q3__c</fullName>
        <label>Current FY Allocated Q3 ($)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BG__c</fullName>
        <inlineHelpText>The name of the HP business group responsible for the plan.</inlineHelpText>
        <label>Business Group</label>
        <picklist>
            <picklistValues>
                <fullName>EG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HPFS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SW</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_FY_Achievement_Q1__c</fullName>
        <formula>IF(RecordType.Name = &apos;BG Specific %&apos; || RecordType.Name = &apos;Attach %&apos; || RecordType.Name = &apos;HP Share of Business %&apos;,IF((Current_FY_Actual_Q1_percent__c = 0) || (Current_FY_Planned_Q1_percent__c =0), 0, (Current_FY_Actual_Q1_percent__c /Current_FY_Planned_Q1_percent__c)),IF(RecordType.Name = &apos;BG Specific #&apos;|| RecordType.Name = &apos;Aged Inventory&apos; || RecordType.Name = &apos;Weeks of Inventory&apos;,IF(Current_FY_Actual_Q1_Days__c = 0 || Current_FY_Planned_Q1_Days__c =0,0,Current_FY_Actual_Q1_Days__c/Current_FY_Planned_Q1_Days__c),IF(RecordType.Name = &apos;Market Development Fund&apos;,IF(MDF_Spent_Amount_Q1__c = 0||Allocated_MDF_Amount_Q1__c=0,0,(MDF_Spent_Amount_Q1__c/Allocated_MDF_Amount_Q1__c)),IF(Current_FY_Actual_Q1__c = 0 || Current_FY_Planned_Q1__c=0,0,Current_FY_Actual_Q1__c / Current_FY_Planned_Q1__c))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The % of the planned value attained for the quarter. Calculation: Actual / Planned</inlineHelpText>
        <label>Current FY Achievement Q1 %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Current_FY_Achievement_Q2__c</fullName>
        <formula>IF(RecordType.Name = &apos;BG Specific %&apos; || RecordType.Name = &apos;Attach %&apos; || RecordType.Name = &apos;HP Share of Business %&apos;,IF((Current_FY_Actual_Q2_percent__c = 0) || (Current_FY_Planned_Q2_percent__c =0), 0, (Current_FY_Actual_Q2_percent__c /Current_FY_Planned_Q2_percent__c)),IF(RecordType.Name = &apos;BG Specific #&apos;|| RecordType.Name = &apos;Aged Inventory&apos; || RecordType.Name = &apos;Weeks of Inventory&apos;,IF(Current_FY_Actual_Q2_Days__c = 0 || Current_FY_Planned_Q2_Days__c =0,0,Current_FY_Actual_Q2_Days__c/Current_FY_Planned_Q2_Days__c),IF(RecordType.Name = &apos;Market Development Fund&apos;,IF(MDF_Spent_Amount_Q2__c = 0||Allocated_MDF_Amount_Q2__c=0,0,(MDF_Spent_Amount_Q2__c/Allocated_MDF_Amount_Q2__c)),IF(Current_FY_Actual_Q2__c = 0 || Current_FY_Planned_Q2__c=0,0,Current_FY_Actual_Q2__c / Current_FY_Planned_Q2__c))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The % of the planned value attained for the quarter. Calculation: Actual / Planned</inlineHelpText>
        <label>Current FY Achievement Q2 %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Current_FY_Achievement_Q3__c</fullName>
        <formula>IF(RecordType.Name = &apos;BG Specific %&apos; || RecordType.Name = &apos;Attach %&apos; || RecordType.Name = &apos;HP Share of Business %&apos;,IF((Current_FY_Actual_Q3_percent__c = 0) || (Current_FY_Planned_Q3_percent__c =0), 0, (Current_FY_Actual_Q3_percent__c /Current_FY_Planned_Q3_percent__c)),IF(RecordType.Name = &apos;BG Specific #&apos;|| RecordType.Name = &apos;Aged Inventory&apos; || RecordType.Name = &apos;Weeks of Inventory&apos;,IF(Current_FY_Actual_Q3_Days__c = 0 || Current_FY_Planned_Q3_Days__c =0,0,Current_FY_Actual_Q3_Days__c/Current_FY_Planned_Q3_Days__c),IF(RecordType.Name = &apos;Market Development Fund&apos;,IF(MDF_Spent_Amount_Q3__c = 0||Allocated_MDF_Amount_Q3__c=0,0,(MDF_Spent_Amount_Q3__c/Allocated_MDF_Amount_Q3__c)),IF(Current_FY_Actual_Q3__c = 0 || Current_FY_Planned_Q3__c=0,0,Current_FY_Actual_Q3__c / Current_FY_Planned_Q3__c))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The % of the planned value attained for the quarter. Calculation: Actual / Planned</inlineHelpText>
        <label>Current FY Achievement Q3 %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Current_FY_Achievement_Total__c</fullName>
        <formula>IF(RecordType.Name = &apos;BG Specific %&apos; || RecordType.Name = &apos;Attach %&apos; || RecordType.Name = &apos;HP Share of Business %&apos;,IF((Current_FY_Actual_Total_percent__c = 0) || (Current_FY_Planned_Total_percent__c =0), 0, (Current_FY_Actual_Total_percent__c /Current_FY_Planned_Total_percent__c)),IF(RecordType.Name = &apos;BG Specific #&apos;|| RecordType.Name = &apos;Aged Inventory&apos; || RecordType.Name = &apos;Weeks of Inventory&apos;,IF(Current_FY_Actual_Total_Days__c = 0 || Current_FY_Planned_Total_Days__c =0,0,Current_FY_Actual_Total_Days__c/Current_FY_Planned_Total_Days__c),IF(RecordType.Name = &apos;Market Development Fund&apos;,IF(Total_MDF_Spent_Amount__c = 0||Total_Allocated_MDFAmount__c=0,0,(Total_MDF_Spent_Amount__c/Total_Allocated_MDFAmount__c)),IF(Current_FY_Actual_Total__c = 0 || Current_FY_Planned_Total__c=0,0,Current_FY_Actual_Total__c / Current_FY_Planned_Total__c))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The % of the planned value attained for the year. Calculation: Actual / Planned</inlineHelpText>
        <label>Current FY Achievement Total  %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Current_FY_Actual_Q1_Days__c</fullName>
        <label>Current FY Actual Q1 (#)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_FY_Actual_Q1__c</fullName>
        <label>Current FY Actual Q1 ($)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_FY_Actual_Q1_percent__c</fullName>
        <label>Current FY Actual Q1 (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Current_FY_Actual_Q2_Days__c</fullName>
        <label>Current FY Actual Q2 (#)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_FY_Actual_Q2__c</fullName>
        <label>Current FY Actual Q2 ($)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_FY_Actual_Q2_percent__c</fullName>
        <label>Current FY Actual Q2 (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Current_FY_Actual_Q3_Days__c</fullName>
        <label>Current FY Actual Q3 (#)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_FY_Actual_Q3__c</fullName>
        <label>Current FY Actual Q3 ($)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_FY_Actual_Q3_percent__c</fullName>
        <label>Current FY Actual Q3 (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Current_FY_Actual_Total_Days__c</fullName>
        <formula>( Current_FY_Actual_Q1_Days__c + Current_FY_Actual_Q2_Days__c + Current_FY_Actual_Q3_Days__c + Current_FY_Actual_Q4_Days__c ) / 4</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current FY Actual Total (#)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_FY_Actual_Total__c</fullName>
        <formula>Current_FY_Actual_Q1__c + Current_FY_Actual_Q2__c + Current_FY_Actual_Q3__c + Current_FY_Actual_Q4__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current FY Actual Total ($)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_FY_Actual_Total_percent__c</fullName>
        <formula>( Current_FY_Actual_Q1_percent__c + Current_FY_Actual_Q2_percent__c + Current_FY_Actual_Q3_percent__c + Current_FY_Actual_Q4_percent__c  ) / 4</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current FY Actual Total (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Current_FY_Planned_Q1_Days__c</fullName>
        <label>Current FY Planned Q1 (#)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_FY_Planned_Q1__c</fullName>
        <label>Current FY Planned Q1 ($)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_FY_Planned_Q1_percent__c</fullName>
        <label>Current FY Planned Q1 (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Current_FY_Planned_Q2_Days__c</fullName>
        <label>Current FY Planned Q2 (#)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_FY_Planned_Q2__c</fullName>
        <label>Current FY Planned Q2 ($)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_FY_Planned_Q2_percent__c</fullName>
        <label>Current FY Planned Q2 (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Current_FY_Planned_Q3_Days__c</fullName>
        <label>Current FY Planned Q3 (#)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_FY_Planned_Q3__c</fullName>
        <label>Current FY Planned Q3 ($)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_FY_Planned_Q3_percent__c</fullName>
        <label>Current FY Planned Q3 (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Current_FY_Planned_Total_Days__c</fullName>
        <formula>( Current_FY_Planned_Q1_Days__c + Current_FY_Planned_Q2_Days__c + Current_FY_Planned_Q3_Days__c + Current_FY_Planned_Q4_Days__c ) / 4</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current FY Planned Total (#)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_FY_Planned_Total__c</fullName>
        <formula>Current_FY_Planned_Q1__c  +  Current_FY_Planned_Q2__c  +  Current_FY_Planned_Q3__c  +  Current_FY_Planned_Q4__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current FY Planned Total ($)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_FY_Planned_Total_percent__c</fullName>
        <formula>( Current_FY_Planned_Q1_percent__c  + Current_FY_Planned_Q2_percent__c  + Current_FY_Planned_Q3_percent__c  + Current_FY_Planned_Q4_percent__c ) / 4</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current FY Planned Total (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GbuSpecializationPlan__c</fullName>
        <inlineHelpText>The associated sub-plan for the metric.</inlineHelpText>
        <label>Sub Plan</label>
        <referenceTo>GBU_Specialization_Plans__c</referenceTo>
        <relationshipLabel>Metrics</relationshipLabel>
        <relationshipName>Metrics</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Last_Upload_Date__c</fullName>
        <label>Last Upload Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MDF_Spent_Amount_Q1__c</fullName>
        <label>Current FY Spent Q1 ($)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MDF_Spent_Amount_Q2__c</fullName>
        <label>Current FY Spent Q2 ($)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MDF_Spent_Amount_Q3__c</fullName>
        <label>Current FY Spent Q3 ($)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MDF_Utilization_Rate_Q1__c</fullName>
        <formula>if(MDF_Spent_Amount_Q1__c==0||  Allocated_MDF_Amount_Q1__c==0,0,( MDF_Spent_Amount_Q1__c /Allocated_MDF_Amount_Q1__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The % of MDF spent of the allocated amount. Calculation: (Spent / Allocated) as a %</inlineHelpText>
        <label>Current FY Utilization Rate Q1 %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MDF_Utilization_Rate_Q2__c</fullName>
        <formula>if(MDF_Spent_Amount_Q2__c==0|| Allocated_MDF_Amount_Q2__c==0,0,( MDF_Spent_Amount_Q2__c /Allocated_MDF_Amount_Q2__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The % of MDF spent of the allocated amount. Calculation: (Spent / Allocated) as a %</inlineHelpText>
        <label>Current FY Utilization Rate Q2 %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MDF_Utilization_Rate_Q3__c</fullName>
        <formula>if(MDF_Spent_Amount_Q3__c==0|| Allocated_MDF_Amount_Q3__c==0,0,( MDF_Spent_Amount_Q3__c /Allocated_MDF_Amount_Q3__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The % of MDF spent of the allocated amount. Calculation: (Spent / Allocated) as a %</inlineHelpText>
        <label>Current FY Utilization Rate Q3 %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Metrics_Type__c</fullName>
        <inlineHelpText>The metric applicable only to the business group selected.</inlineHelpText>
        <label>Metrics Type</label>
        <picklist>
            <controllingField>BG__c</controllingField>
            <picklistValues>
                <fullName>Partner Programs:  Win Ratio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Penetration Rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conversion Rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal Rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HP Contract Revenue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Penetration Rate Index</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Total Operating Performance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Channel Assistance Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Turn Around Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HP v. Non HP Product Mix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attach %</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HP Share of Business %</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market Development Fund</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner Compensation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weeks of Inventory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aged Inventory</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Previous_FY_Actual_Q1_Days__c</fullName>
        <label>Previous FY Actual Q1 (#)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_FY_Actual_Q1__c</fullName>
        <label>Previous FY Actual Q1 ($)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Previous_FY_Actual_Q1_percent__c</fullName>
        <label>Previous FY Actual Q1 (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Previous_FY_Actual_Q2_Days__c</fullName>
        <label>Previous FY Actual Q2 (#)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_FY_Actual_Q2__c</fullName>
        <label>Previous FY Actual Q2 ($)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Previous_FY_Actual_Q2_percent__c</fullName>
        <label>Previous FY Actual Q2 (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Previous_FY_Actual_Q3_Days__c</fullName>
        <label>Previous FY Actual Q3 (#)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_FY_Actual_Q3__c</fullName>
        <label>Previous FY Actual Q3 ($)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Previous_FY_Actual_Q3_percent__c</fullName>
        <label>Previous FY Actual Q3 (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Previous_FY_Actual_Total_Days__c</fullName>
        <formula>( Previous_FY_Actual_Q1_Days__c + Previous_FY_Actual_Q2_Days__c + Previous_FY_Actual_Q3_Days__c + Previous_FY_Actual_Q4_Days__c ) / 4</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Previous FY Actual Total (#)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_FY_Actual_Total__c</fullName>
        <formula>Previous_FY_Actual_Q1__c  +  Previous_FY_Actual_Q2__c  +  Previous_FY_Actual_Q3__c  +  Previous_FY_Actual_Q4__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Previous FY Actual Total ($)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Previous_FY_Actual_Total_percent__c</fullName>
        <formula>( Previous_FY_Actual_Q1_percent__c  + Previous_FY_Actual_Q2_percent__c + Previous_FY_Actual_Q3_percent__c + Previous_FY_Actual_Q4_percent__c ) / 4</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Previous FY Actual Total (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Previous_Year_MDF_Spent_Q1__c</fullName>
        <label>Previous FY Spent Q1 ($)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Previous_Year_MDF_Spent_Q2__c</fullName>
        <label>Previous FY Spent Q2 ($)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Previous_Year_MDF_Spent_Q3__c</fullName>
        <label>Previous FY Spent Q3 ($)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Previous_Year_MDF_Spent_Total__c</fullName>
        <formula>Previous_Year_MDF_Spent_Q1__c +  Previous_Year_MDF_Spent_Q3__c +  Previous_Year_MDF_Spent_Q4__c +  Previous_Year_MDF_Spent_Q2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Previous FY Spent Total ($)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Allocated_MDFAmount__c</fullName>
        <formula>Allocated_MDF_Amount_Q1__c  +  Allocated_MDF_Amount_Q2__c +  Allocated_MDF_Amount_Q3__c +  Allocated_MDF_Amount_Q4__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current FY Allocated Total ($)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_MDF_Spent_Amount__c</fullName>
        <formula>MDF_Spent_Amount_Q1__c + MDF_Spent_Amount_Q2__c + MDF_Spent_Amount_Q3__c + MDF_Spent_Amount_Q4__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current FY Spent Total ($)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_MDF_Utilization_Rate__c</fullName>
        <formula>if(Total_MDF_Spent_Amount__c==0|| Total_Allocated_MDFAmount__c==0,0,( Total_MDF_Spent_Amount__c /Total_Allocated_MDFAmount__c ))</formula>
        <inlineHelpText>The % of MDF spent of the allocated amount. Calculation: (Spent / Allocated) as a %</inlineHelpText>
        <label>Current FY Utilization Rate Total %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_YoY_Actual_Growth__c</fullName>
        <formula>IF(RecordType.Name = &apos;BG Specific %&apos; || RecordType.Name = &apos;Attach %&apos; || RecordType.Name = &apos;HP Share of Business %&apos;,IF((Current_FY_Actual_Total_percent__c = 0) || (Previous_FY_Actual_Total_percent__c  =0), 0, (Current_FY_Actual_Total_percent__c - Previous_FY_Actual_Total_percent__c)),IF(RecordType.Name = &apos;BG Specific #&apos;|| RecordType.Name = &apos;Aged Inventory&apos; || RecordType.Name = &apos;Weeks of Inventory&apos;,IF(Current_FY_Actual_Total_Days__c = 0 || Previous_FY_Actual_Total_Days__c =0,0,(Current_FY_Actual_Total_Days__c-Previous_FY_Actual_Total_Days__c)/Previous_FY_Actual_Total_Days__c),IF(RecordType.Name = &apos;Market Development Fund&apos;,IF(Total_MDF_Spent_Amount__c = 0||Previous_Year_MDF_Spent_Total__c=0,0,(Total_MDF_Spent_Amount__c-Previous_Year_MDF_Spent_Total__c)/Previous_Year_MDF_Spent_Total__c),IF(Current_FY_Actual_Total__c = 0 || Previous_FY_Actual_Total__c=0,0,(Current_FY_Actual_Total__c - Previous_FY_Actual_Total__c)/Previous_FY_Actual_Total__c))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The % increase or decrease between the previous year actual and the current year actual value for the year. Calculation: (Actual – Prev. Yr. Actual) / Prev. Yr. Actual</inlineHelpText>
        <label>YoY Actual Growth Total %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>YoY_Actual_Growth_Q1__c</fullName>
        <formula>IF(RecordType.Name = &apos;BG Specific %&apos; || RecordType.Name = &apos;Attach %&apos; || RecordType.Name = &apos;HP Share of Business %&apos;,IF((Current_FY_Actual_Q1_percent__c = 0) || (Previous_FY_Actual_Q1_percent__c  =0), 0, (Current_FY_Actual_Q1_percent__c - Previous_FY_Actual_Q1_percent__c)),IF(RecordType.Name = &apos;BG Specific #&apos;|| RecordType.Name = &apos;Aged Inventory&apos; || RecordType.Name = &apos;Weeks of Inventory&apos;,IF(Current_FY_Actual_Q1_Days__c = 0 || Previous_FY_Actual_Q1_Days__c =0,0,(Current_FY_Actual_Q1_Days__c-Previous_FY_Actual_Q1_Days__c)/Previous_FY_Actual_Q1_Days__c),IF(RecordType.Name = &apos;Market Development Fund&apos;,IF(MDF_Spent_Amount_Q1__c = 0||Previous_Year_MDF_Spent_Q1__c=0,0,(MDF_Spent_Amount_Q1__c-Previous_Year_MDF_Spent_Q1__c)/Previous_Year_MDF_Spent_Q1__c),IF(Current_FY_Actual_Q1__c = 0 || Previous_FY_Actual_Q1__c=0,0,(Current_FY_Actual_Q1__c - Previous_FY_Actual_Q1__c)/Previous_FY_Actual_Q1__c))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The % increase or decrease between the previous year actual and the current year actual value for the quarter. Calculation: (Actual – Prev. Yr. Actual) / Prev. Yr. Actual</inlineHelpText>
        <label>YoY Actual Growth Q1 %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>YoY_Actual_Growth_Q2__c</fullName>
        <formula>IF(RecordType.Name = &apos;BG Specific %&apos; || RecordType.Name = &apos;Attach %&apos; || RecordType.Name = &apos;HP Share of Business %&apos;,IF((Current_FY_Actual_Q2_percent__c = 0) || (Previous_FY_Actual_Q2_percent__c  =0), 0, (Current_FY_Actual_Q2_percent__c - Previous_FY_Actual_Q2_percent__c)),IF(RecordType.Name = &apos;BG Specific #&apos;|| RecordType.Name = &apos;Aged Inventory&apos; || RecordType.Name = &apos;Weeks of Inventory&apos;,IF(Current_FY_Actual_Q2_Days__c = 0 || Previous_FY_Actual_Q2_Days__c =0,0,(Current_FY_Actual_Q2_Days__c-Previous_FY_Actual_Q2_Days__c)/Previous_FY_Actual_Q2_Days__c),IF(RecordType.Name = &apos;Market Development Fund&apos;,IF(MDF_Spent_Amount_Q2__c = 0||Previous_Year_MDF_Spent_Q2__c=0,0,(MDF_Spent_Amount_Q2__c-Previous_Year_MDF_Spent_Q2__c)/Previous_Year_MDF_Spent_Q2__c),IF(Current_FY_Actual_Q2__c = 0 || Previous_FY_Actual_Q2__c=0,0,(Current_FY_Actual_Q2__c - Previous_FY_Actual_Q2__c)/Previous_FY_Actual_Q2__c))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The % increase or decrease between the previous year actual and the current year actual value for the quarter. Calculation: (Actual – Prev. Yr. Actual) / Prev. Yr. Actual</inlineHelpText>
        <label>YoY Actual Growth Q2 %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>YoY_Actual_Growth_Q3__c</fullName>
        <formula>IF(RecordType.Name = &apos;BG Specific %&apos; || RecordType.Name = &apos;Attach %&apos; || RecordType.Name = &apos;HP Share of Business %&apos;,IF((Current_FY_Actual_Q3_percent__c = 0) || (Previous_FY_Actual_Q3_percent__c  =0), 0, (Current_FY_Actual_Q3_percent__c - Previous_FY_Actual_Q3_percent__c)),IF(RecordType.Name = &apos;BG Specific #&apos;|| RecordType.Name = &apos;Aged Inventory&apos; || RecordType.Name = &apos;Weeks of Inventory&apos;,IF(Current_FY_Actual_Q3_Days__c = 0 || Previous_FY_Actual_Q3_Days__c =0,0,(Current_FY_Actual_Q3_Days__c-Previous_FY_Actual_Q3_Days__c)/Previous_FY_Actual_Q3_Days__c),IF(RecordType.Name = &apos;Market Development Fund&apos;,IF(MDF_Spent_Amount_Q3__c = 0||Previous_Year_MDF_Spent_Q3__c=0,0,(MDF_Spent_Amount_Q3__c-Previous_Year_MDF_Spent_Q3__c)/Previous_Year_MDF_Spent_Q3__c),IF(Current_FY_Actual_Q3__c = 0 || Previous_FY_Actual_Q3__c=0,0,(Current_FY_Actual_Q3__c - Previous_FY_Actual_Q3__c)/Previous_FY_Actual_Q3__c))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The % increase or decrease between the previous year actual and the current year actual value for the quarter. Calculation: (Actual – Prev. Yr. Actual) / Prev. Yr. Actual</inlineHelpText>
        <label>YoY Actual Growth Q3 %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>YoY_gr_Comparision_Plan_Q1__c</fullName>
        <formula>IF(RecordType.Name = &apos;BG Specific %&apos; || RecordType.Name = &apos;Attach %&apos; || RecordType.Name = &apos;HP Share of Business %&apos;,IF((Current_FY_Planned_Q1_percent__c = 0) || (Previous_FY_Actual_Q1_percent__c =0), 0, Current_FY_Planned_Q1_percent__c - Previous_FY_Actual_Q1_percent__c),IF(RecordType.Name = &apos;BG Specific #&apos; || RecordType.Name = &apos;Aged Inventory&apos; || RecordType.Name = &apos;Weeks of Inventory&apos;, IF(Current_FY_Planned_Q1_Days__c = 0 || Previous_FY_Actual_Q1_Days__c =0,0,(Current_FY_Planned_Q1_Days__c-Previous_FY_Actual_Q1_Days__c)/Previous_FY_Actual_Q1_Days__c),IF(RecordType.Name = &apos;Market Development Fund&apos;,IF(Allocated_MDF_Amount_Q1__c = 0||Previous_Year_MDF_Spent_Q1__c=0,0,(Allocated_MDF_Amount_Q1__c-Previous_Year_MDF_Spent_Q1__c)/Previous_Year_MDF_Spent_Q1__c),IF(Current_FY_Planned_Q1__c = 0 || Previous_FY_Actual_Q1__c=0,0,(Current_FY_Planned_Q1__c - Previous_FY_Actual_Q1__c)/Previous_FY_Actual_Q1__c))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The % increase or decrease between the previous year actual and the current year planned value for the quarter. Calculation: (Planned – Prev. Yr. Actual) / Prev. Yr. Actual</inlineHelpText>
        <label>YoY Planned Growth Q1 %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>YoY_gr_Comparision_Plan_Q2__c</fullName>
        <formula>IF(RecordType.Name = &apos;BG Specific %&apos; || RecordType.Name = &apos;Attach %&apos; || RecordType.Name = &apos;HP Share of Business %&apos;,IF((Current_FY_Planned_Q2_percent__c = 0) || (Previous_FY_Actual_Q2_percent__c  =0), 0, Current_FY_Planned_Q2_percent__c - Previous_FY_Actual_Q2_percent__c),IF(RecordType.Name = &apos;BG Specific #&apos; || RecordType.Name = &apos;Aged Inventory&apos; || RecordType.Name = &apos;Weeks of Inventory&apos;,IF(Current_FY_Planned_Q2_Days__c = 0 || Previous_FY_Actual_Q2_Days__c =0,0,(Current_FY_Planned_Q2_Days__c-Previous_FY_Actual_Q2_Days__c)/Previous_FY_Actual_Q2_Days__c),IF(RecordType.Name = &apos;Market Development Fund&apos;,IF(Allocated_MDF_Amount_Q2__c = 0||Previous_Year_MDF_Spent_Q2__c=0,0,(Allocated_MDF_Amount_Q2__c-Previous_Year_MDF_Spent_Q2__c)/Previous_Year_MDF_Spent_Q2__c),IF(Current_FY_Planned_Q2__c = 0 || Previous_FY_Actual_Q2__c=0,0,(Current_FY_Planned_Q2__c - Previous_FY_Actual_Q2__c)/Previous_FY_Actual_Q2__c))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The % increase or decrease between the previous year actual and the current year planned value for the quarter. Calculation: (Planned – Prev. Yr. Actual) / Prev. Yr. Actual</inlineHelpText>
        <label>YoY Planned Growth Q2 %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>YoY_gr_Comparision_Plan_Q3__c</fullName>
        <formula>IF(RecordType.Name = &apos;BG Specific %&apos; || RecordType.Name = &apos;Attach %&apos; || RecordType.Name = &apos;HP Share of Business %&apos;,IF((Current_FY_Planned_Q3_percent__c = 0) || (Previous_FY_Actual_Q3_percent__c  =0), 0, Current_FY_Planned_Q3_percent__c - Previous_FY_Actual_Q3_percent__c),IF(RecordType.Name = &apos;BG Specific #&apos; || RecordType.Name = &apos;Aged Inventory&apos; || RecordType.Name = &apos;Weeks of Inventory&apos;,IF(Current_FY_Planned_Q3_Days__c = 0 || Previous_FY_Actual_Q3_Days__c =0,0,(Current_FY_Planned_Q3_Days__c-Previous_FY_Actual_Q3_Days__c)/Previous_FY_Actual_Q3_Days__c),IF(RecordType.Name = &apos;Market Development Fund&apos;,IF(Allocated_MDF_Amount_Q3__c = 0||Previous_Year_MDF_Spent_Q3__c=0,0,(Allocated_MDF_Amount_Q3__c-Previous_Year_MDF_Spent_Q3__c)/Previous_Year_MDF_Spent_Q3__c),IF(Current_FY_Planned_Q3__c = 0 || Previous_FY_Actual_Q3__c=0,0,(Current_FY_Planned_Q3__c - Previous_FY_Actual_Q3__c)/Previous_FY_Actual_Q3__c))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The % increase or decrease between the previous year actual and the current year planned value for the quarter. Calculation: (Planned – Prev. Yr. Actual) / Prev. Yr. Actual</inlineHelpText>
        <label>YoY Planned Growth Q3 %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
</CustomObject>